--- a/TakeAwayExample2/appsettings.json
+++ b/TakeAwayExample2/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-TakeAwayExample2-53bc9b9d-9d6a-45d4-8429-2a2761773502;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "TakeAwayDBConnection": "Server=DESKTOP-48F44VT; Database=TakeAway2DB; Trusted_Connection=True;"
   },
   "Logging": {
     "LogLevel": {
