--- a/TakeAwayExample2.DataAccess/TakeAwayExample2.DataAccess.csproj
+++ b/TakeAwayExample2.DataAccess/TakeAwayExample2.DataAccess.csproj
@@ -11,4 +11,15 @@
     <PackageReference Include="Stripe.net" Version="39.8.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Migrations\" />
+    <Folder Include="Initializer\" />
+    <Folder Include="Repository\IRepository\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\TakeAwayExample2.Models\TakeAwayExample2.Models.csproj" />
+    <ProjectReference Include="..\TakeAwayExample2.Utility\TakeAwayExample2.Utility.csproj" />
+  </ItemGroup>
+
 </Project>
