--- a/TakeAwayExample2/TakeAwayExample2.csproj
+++ b/TakeAwayExample2/TakeAwayExample2.csproj
@@ -20,4 +20,10 @@
     <ProjectReference Include="..\TakeAwayExample2.Models\TakeAwayExample2.Models.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Pages\Adim\" />
+    <Folder Include="Pages\Customer\Cart\" />
+    <Folder Include="Pages\Customer\Home\" />
+  </ItemGroup>
+
 </Project>
