--- a/TakeAwayExample2.DataAccess/TakeAwayExample2.DataAccess.csproj
+++ b/TakeAwayExample2.DataAccess/TakeAwayExample2.DataAccess.csproj
@@ -7,6 +7,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="3.1.7" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.2.5" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.ViewFeatures" Version="2.2.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.7" />
     <PackageReference Include="Stripe.net" Version="39.8.0" />
   </ItemGroup>
