Added an image for the Order comfirmation page.

--- a/TakeAwayExample2/TakeAwayExample2.csproj
+++ b/TakeAwayExample2/TakeAwayExample2.csproj
@@ -24,4 +24,8 @@
     <ProjectReference Include="..\TakeAwayExample2.Models\TakeAwayExample2.Models.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\images\AppImages\" />
+  </ItemGroup>
+
 </Project>
